# Verbify-TTS

./: INSTALL_LINUX.sh  README.md  command_read.py  pyproject.toml  tts.scm
